changed a little bit test task in gradle to excecute the tests simply from terminal.

--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,8 @@ dependencies {
     testImplementation 'io.github.bonigarcia:webdrivermanager:4.0.0'
 
 }
+
+test {
+    testLogging.showStandardStreams(true)
+    systemProperties System.getProperties()
+}
